--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -1,4 +1,3 @@
-
 .header {
   height: 70px;
   width: 100%;
@@ -21,6 +20,8 @@
 
     .option {
       padding: 10px 15px;
+      cursor: pointer;
+      text-transform: uppercase;
     }
   }
 }
